fix - wrapping issue

--- a/src/components/HomeBanner.module.scss
+++ b/src/components/HomeBanner.module.scss
@@ -64,9 +64,6 @@
         .banner-maintext {
             font-size: 20px;
             font-weight: 800;
-            display: flex;
-            align-items: center;
-            justify-content: center;
 
             @include media(">=smMin") {
                 font-size: 25px;
@@ -78,18 +75,19 @@
 
 .clicking-anim {
     margin-bottom: 0.4em;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
     padding-bottom: 1.4em;
     position: relative;
     margin: 0 1em 0 0;
+
     img {
         z-index: 20;
         height: 40px;
         width: 40px;
-        transform: rotate(-30deg) translate(10%,50%);
+        transform: rotate(-30deg) translate(10%, 50%);
     }
 
     &::after {
